# rust-scratch

./: LICENSE  README.md
first_word/src/: main.rs
guessing_game/src/: main.rs
insertion_sort/src/: main.rs
k8s/k8s-crd/: Cargo.toml  commands.md  crd.yaml  drw-widget1.yaml
k8s/k8s-crd/src/: events_enums.rs  main.rs  widget_spec.rs
minigrep/: output.txt
minigrep/src/: main.rs
rectangles/src/: main.rs
restaurant/src/: back_of_house.rs  front_of_house.rs
roman_numeral_parse/: Cargo.toml
roman_numeral_parse/src/: main.rs
rust-lang/minigrep/src/: lib.rs
rust-lang/restaurant/src/: lib.rs
