[package]
name = "k8s-crd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.85", default-defaults = false, features = ["client", "rustls-tls"] }
k8s-openapi = { version = "0.19", features = ["v1_27"], default-features = false }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.4.1", features = [ "v4", "serde" ] }
strum = { version = "0.25.0", features = ["derive"] }
